--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,43 +1,60 @@
 * {
   box-sizing: border-box;
-  /* outline: 1px red dashed; */
+  outline: 1px red dashed;
 }
 
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  font-family: sans-serif;
+  color: white;
 }
+
 header,
 footer {
-  background-color: #333;
-  color: white;
-  padding: 1rem;
+  background-color: rgb(62, 62, 62);
   text-align: center;
+  padding: 1rem;
 }
+
 main {
+  flex: 1;
   display: flex;
-  flex: 1;
+  /* background-color: orange; */
 }
-.content {
-  flex: 3;
-  padding: 1rem;
-  background-color: #f0f0f0;
-}
-.sidebar {
+
+aside {
   flex: 1;
   padding: 1rem;
-  background-color: #ddd;
+  /* background-color: rgb(209, 169, 94); */
+  background-image: url("../..assets/winter_cluster.png");
 }
+
+.aside_div {
+  /* background-color: red; */
+  /* background-image: url("../../assets/winter_cluster.png"); */
+}
+section {
+  flex: 5;
+  display: flex;
+  /* padding: 1rem; */
+  /* flex-direction: column; */
+}
+
+.section_div {
+  padding: 1rem;
+  flex: 1;
+  background-color: rgb(212, 158, 59);
+}
+
 @media (max-width: 768px) {
   main {
     flex-direction: column;
-    color: orange;
   }
-  .sidebar {
+  aside {
     order: -1;
   }
 }
